<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ml"
    android:orientation="vertical"
    android:background="@drawable/yve">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#07285c">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="0dp"/>
            <Button
                android:backgroundTint="@color/white"
                android:gravity="left|center_vertical"
                android:drawableStart="@drawable/ic_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Cari sesuatu"
                android:textAllCaps="false"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


           <ImageView
               android:layout_width="match_parent"
               android:layout_height="250dp"
               android:src="@drawable/priceml"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/nama"
               android:textStyle="bold"
               android:textSize="25sp"
               android:id="@+id/nama"
               android:inputType="textPersonName"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/id_server"
               android:textStyle="bold"
               android:textSize="25sp"
               android:id="@+id/id_server" />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/nick_ml"
               android:textStyle="bold"
               android:textSize="25sp"
               android:id="@+id/nick_ml" />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/diamond"
               android:textStyle="bold"
               android:textSize="25sp"
               android:id="@+id/diamond" />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/sisa"
               android:textStyle="bold"
               android:textSize="25sp"
               android:id="@+id/sisa" />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:backgroundTint="@color/white"
               android:text="KIRIM"
               android:layout_gravity="center"
               android:textColor="@color/black"
               android:id="@+id/kirim"/>




</LinearLayout>