<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopUp"
    android:orientation="vertical"
    android:background="@drawable/semua">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#07285c">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="0dp"/>
            <Button
                android:backgroundTint="@color/white"
                android:gravity="left|center_vertical"
                android:drawableStart="@drawable/ic_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Cari sesuatu"
                android:textAllCaps="false"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <Button
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:text="@string/ml"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:id="@+id/btn_ml"
        android:layout_marginTop="100dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/ff"
        android:id="@+id/btn_ff"
        android:backgroundTint="@color/teal_700"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/pubg"
        android:id="@+id/btn_pubg"
        android:backgroundTint="@color/teal_700"/>
</LinearLayout>